tests/147_init_list_error.pirx
// Invalid uses of initializer lists must produce proper errors.
struct Point {
  x: int;
  y: int;
}

func main(): int {
  // Element count must match the number of struct fields.
  var p: Point = {1};
  // Element types must match the field types.
  var q: Point = {1, true};
  // Initializer lists only work for structs.
  var i: int = {1};
  // The type cannot be inferred from an initializer list.
  var v = {1, 2};
  // Initializer lists are not allowed outside of variable declarations.
  p = {3, 4};
  return 0;
}
